# ZephCore

./: .gitignore  README.md
zephcore/: ARCHITECTURE.md  CMakeLists.txt  Kconfig  Repeater_CLI_commands.md  west.yml
zephcore/adapters/ble/: ZephyrBLE.cpp  ZephyrBLE.h
zephcore/adapters/board/: ZephyrBoard.cpp
zephcore/adapters/datastore/: ZephyrDataStore.cpp
zephcore/adapters/gps/: ZephyrGPSManager.cpp
zephcore/adapters/mqtt/: ZephyrMQTTPublisher.c  ZephyrMQTTPublisher.h
zephcore/adapters/ota/: wifi_ota.c
zephcore/adapters/radio/: LoRaRadioBase.cpp  LoRaRadioBase.h  SX126xRadio.cpp  SX127xRadio.cpp  SX127xRadio.h  radio_common.h
zephcore/adapters/radio/lr11xx/: lr11xx_hal.h  lr11xx_hal_zephyr.c  lr11xx_hal_zephyr.h  lr11xx_radio.c  lr11xx_radio_timings.c  lr11xx_radio_types.h  lr11xx_regmem.c  lr11xx_system.c  lr11xx_system.h  lr11xx_system_types.h  lr11xx_types.h
zephcore/adapters/radio/lr20xx/: lr20xx_hal.h  lr20xx_hal_zephyr.c  lr20xx_hal_zephyr.h  lr20xx_radio_common.c  lr20xx_radio_common.h  lr20xx_radio_fifo.h  lr20xx_radio_flrc.h  lr20xx_radio_flrc_types.h  lr20xx_radio_lora.c  lr20xx_radio_lora.h  lr20xx_radio_lora_types.h  lr20xx_radio_ook.h  lr20xx_radio_ook_types.h  lr20xx_regmem.c  lr20xx_regmem.h  lr20xx_status.h  lr20xx_system.c  lr20xx_system.h  lr20xx_system_types.h  lr20xx_workarounds.c  lr20xx_workarounds.h
zephcore/adapters/usb/: ZephyrCompanionUSB.cpp  ZephyrRepeaterUSB.cpp
zephcore/adapters/wifi/: ZephyrWiFiStation.c  ZephyrWiFiStation.h
zephcore/app/: CompanionMesh.cpp  CompanionMesh.h  ObserverMesh.cpp  ObserverMesh.h  RepeaterDataStore.cpp  RepeaterMesh.cpp  RepeaterMesh.h  main_observer.cpp  observer_creds.h
zephcore/boards/: supported_boards.md
zephcore/boards/common/: logging.conf  mg24_common.conf  nrf52_common.conf  nrf52_wakeup.dtsi  observer.conf  zephcore_common.conf
zephcore/boards/esp32/lilygo_tlora_c6/: board.overlay
zephcore/boards/esp32/station_g2/: board.overlay
zephcore/boards/esp32/ttgo_lora32/: board.conf  board.overlay
zephcore/boards/esp32/xiao_esp32c3/: board.overlay
zephcore/boards/esp32/xiao_esp32c6/: board.overlay
zephcore/boards/example_board/: README.md  board.overlay
zephcore/boards/mg24/xiao_mg24/: board.overlay
zephcore/boards/nrf52840/promicro_lr2021/: promicro_lr2021.dts
zephcore/boards/nrf52840/promicro_sx1262/: Kconfig.promicro_sx1262  board.conf  board.yml  promicro_sx1262-pinctrl.dtsi  promicro_sx1262.dts  promicro_sx1262_defconfig
zephcore/boards/nrf52840/rak_wismesh_tag/: rak_wismesh_tag.dts
zephcore/boards/nrf52840/t1000_e/: t1000_e_nrf52840.dts
zephcore/boards/nrf52840/thinknode_m1/: thinknode_m1.dts
zephcore/boards/nrf52840/thinknode_m3/: thinknode_m3.dts
zephcore/boards/nrf52840/thinknode_m6/: thinknode_m6.dts
zephcore/boards/nrf52840/wio_tracker_l1/: wio_tracker_l1_nrf52840.dts
zephcore/boards/nrf54l/xiao_nrf54l15/: board.overlay
zephcore/helpers/: BaseChatMesh.cpp  CommonCLI.cpp  IdentityStore.h  NodePrefs.h  TransportKeyStore.cpp
zephcore/helpers/ui/: buzzer.c  buzzer.h  display.c  doom_game.c  input_multi_tap.c  ui_mesh_actions.cpp  ui_mesh_actions.h  ui_mesh_actions_stubs.c  ui_pages.c  ui_pages.h  ui_task.c  ui_task.h
zephcore/include/mesh/: Board.h  Clock.h  ContentionTracker.h  Dispatcher.h  Identity.h  LoRaConfig.h  MeshCore.h  Packet.h  RadioIncludes.h
zephcore/patches/espressif/: 0001-mcuboot-config.patch
zephcore/patches/zephyr-new/drivers/lora/lr11xx/: lr11xx_lora.c
zephcore/patches/zephyr-new/drivers/lora/lr20xx/: lr20xx_lora.c
zephcore/src/: ContentionTracker.cpp  Dispatcher.cpp  Mesh.cpp  Utils.cpp  main_companion.cpp  main_repeater.cpp
zephcore/sysbuild/: CMakeLists.txt  mcuboot.conf  mcuboot_flashsize_8mb.conf
